src/objects/NetSuite_Estimate__c.object
<CustomObject>
    <description>Quote/Estimate from NetSuite</description>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>R00N60000001i5StEAI</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Currency__c</fullName>
        <label>Currency</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Discount_Total__c</fullName>
        <label>Discount Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Document_Id__c</fullName>
        <label>Document Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Document__c</fullName>
        <formula>IF( Document_Id__c == null , &apos;&apos;, HYPERLINK(&apos;/servlet/servlet.FileDownload?file=&apos; + Document_Id__c , Name + &apos;.pdf&apos;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Document</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Memo__c</fullName>
        <label>Memo</label>
        <length>75</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NetSuite_Id__c</fullName>
        <externalId>true</externalId>
        <label>NetSuite Id</label>
        <length>25</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Quotes</relationshipLabel>
        <relationshipName>R00N60000001i5FyEAI</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Other_Ref_Number__c</fullName>
        <label>Other Ref Number</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Shipping_Total__c</fullName>
        <description>Estimated shipping costs based on the shipping method selected in NetSuite shipMethod</description>
        <label>Shipping Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <length>75</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Subtotal__c</fullName>
        <description>Estimate total before any discounts, shipping cost, handling cost or tax is added to the estimate.</description>
        <label>Subtotal</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Tax_Total__c</fullName>
        <label>Tax Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total__c</fullName>
        <label>Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Transaction_Date__c</fullName>
        <description>Date used to determine the date range in which this transaction appears on the Estimate in NetSuite</description>
        <label>Transaction Date</label>
        <type>Date</type>
    </fields>
    <label>Quote</label>
    <nameField>
        <label>Transaction Id</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Quotes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>